<resources>
    <string name="app_name">Real-Time Maps Assignment</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to
        authenticate with Firebase.
    </string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for
        Cloud Identity Platform.
    </string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="register">Register</string>
    <string name="admin">Admin Page</string>
    <string name="maps">Time by location</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the
        Email/Password example to sign in and then return here to enroll in multi-factor auth.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation close</string>
    <string name="title_activity_maps">Map</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
