<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:weightSum="4"
        tools:context=".MainActivity">

    <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <LinearLayout
            android:layout_width="410dp"
            android:layout_height="303dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/linearLayout3">
        <ImageView
                android:id="@+id/icon"
                style="@style/ThemeOverlay.FirebaseIcon"
                android:layout_width="291dp"
                android:layout_height="140dp"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@drawable/time"/>

        <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:text="@string/emailpassword_title_text"
                android:theme="@style/ThemeOverlay.MyTitleText"/>

        <TextView
                android:id="@+id/status"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/signed_out"/>

        <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                tools:text="Firebase User ID: 123456789abc"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey_300"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
    >
        <LinearLayout
                android:id="@+id/emailPasswordFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <EditText
                    android:id="@+id/fieldEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            <EditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/emailPasswordButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailPasswordFields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <Button
                    android:id="@+id/emailSignInButton"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_in"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                    android:id="@+id/emailCreateAccountButton"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_account"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/signedInButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone">

            <Button
                    android:id="@+id/signOutButton"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>


            <Button
                    android:id="@+id/reloadButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reload"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>